--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -42,19 +42,12 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.hmall.cart.controller
-hm:
-  jwt:
-    location: classpath:hmall.jks
-    alias: hmall
-    password: hmall123
-    tokenTTL: 30m
-  auth:
-    excludePaths:
-      - /search/**
-      - /users/login
-      - /items/**
-      - /hi
-# keytool -genkeypair -alias hmall -keyalg RSA -keypass hmall123 -keystore hmall.jks -storepass hmall123
+
 feign:
   okhttp:
     enabled: true
+
+
+#hm:
+#  db:
+#    database: hm-cart
